# bentodesk

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: README.md  architecture.md  (+3 more)
src-tauri/: Cargo.toml  build.rs  nsis-hooks.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: crash_handler.rs  desktop_sources.rs  error.rs  guardrails.rs  hidden_items.rs  lib.rs  main.rs  power.rs  recovery_bundle.rs  storage.rs
src-tauri/src/commands/: bulk.rs  config_vault.rs  context_capsule.rs  file_ops.rs  grouping.rs  icon.rs  icon_positions.rs  item.rs  layout.rs  live_folder.rs  memory.rs  minibar.rs  mod.rs  plugins.rs  rules.rs  settings.rs  stealth.rs  system.rs  timeline.rs  updater.rs  zone.rs
src-tauri/src/config/: backup.rs  encryption.rs  migration.rs  mod.rs  settings.rs  tests_upgrade.rs
src-tauri/src/context_capsule/: enum_windows.rs  matcher.rs  mod.rs
src-tauri/src/display/: mod.rs  monitors.rs
src-tauri/src/drag_drop/: data_object.rs  drag_manager.rs  drop_source.rs  mod.rs
src-tauri/src/ghost_layer/: highlight_overlay.rs  manager.rs  mod.rs
src-tauri/src/grouping/: ai_recommender.rs  feature.rs  mod.rs  rules.rs  scanner.rs  suggestions.rs
src-tauri/src/icon/: cache.rs  cache_tier.rs  custom_icons.rs  extractor.rs  mod.rs  protocol.rs  stats.rs  svg_sanitize.rs
src-tauri/src/icon_positions/: finder.rs  mod.rs  reader.rs  writer.rs
src-tauri/src/layout/: mod.rs  persistence.rs  resolution.rs  snapshot.rs
src-tauri/src/minibar/: mod.rs
src-tauri/src/plugins/: loader.rs  manifest.rs  mod.rs  registry.rs
src-tauri/src/rules/: executor.rs  mod.rs  scheduler.rs
src-tauri/src/startup/: mod.rs
src-tauri/src/themes/: loader.rs  mod.rs
src-tauri/src/timeline/: checkpoint.rs  hook.rs  mod.rs  ring_buffer.rs
src-tauri/src/tray/: menu.rs  mod.rs
src-tauri/src/updater/: event.rs  mod.rs
src-tauri/src/watcher/: desktop_watcher.rs  live_folder.rs  mod.rs
(+180 files in other folders)
