[package]
name = "bentodesk"
version = "0.1.0"
edition = "2021"
description = "Zero-interference desktop visual organizer"
license = "MIT"
default-run = "bentodesk"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lru = "0.12"
thiserror = "2"
anyhow = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
notify = "7"
notify-debouncer-full = "0.4"
dirs = "6"
urlencoding = "2"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
zip = "2"

windows-core = "0.58"

[dependencies.windows]
version = "0.58"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
    "Win32_System_Registry",
]

[[bin]]
name = "guardian"
path = "src/bin/guardian.rs"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = "z"        # Optimize for size
lto = true             # Link-time optimization
codegen-units = 1      # Single codegen unit for max optimization
panic = "abort"        # Smaller binary, no unwinding
strip = true           # Strip debug symbols
